# self_recognition

./: README.md  data.py  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommands.sh
scripts/: plot_preference.py
